# agno_roadmap

./: .gitignore  README.md  readme.txt
agno-hello/: hello-agno.py  pyproject.toml
agno-hello-tool/: .env.example  hello_tool.py  hello_tool_custom.py  hello_tool_financeiro.py  pyproject.toml
agno-sonho/: .env.example  main.py  pyproject.toml
agno-storage/: .env.example  hello_agent_os.py  hello_agno_streamlit_UI.py  hello_agno_streamlite.py  hello_claude.py  hello_storage_basic.py  hello_storage_memoria.py  hello_storage_rag.py  hello_storage_session.py  pyproject.toml
crewai-hello/: hello-crewai.py  pyproject.toml
langchain-hello/: .env.example  hello-langchain.py  pyproject.toml
langgraph-hello/: hello-langgraph.py  pyproject.toml
