[project]
name = "agno-storage"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "agno>=2.5.16",
    "anthropic>=0.94.1",
    "chonkie>=1.6.2",
    "fastapi>=0.135.3",
    "groq>=1.1.2",
    "openai>=2.31.0",
    "pypdf>=6.10.1",
    "sqlalchemy>=2.0.49",
    "tavily-python>=0.7.23",
    "uvicorn>=0.44.0",
    "yfinance>=1.2.2",
    "streamlit>=1.40.0",
]
